# Technical-Director

./: README.md  README.rst  pyproject.toml
technical_director/: commercial_utils.py  scheduler_client.py  technical_director.py  video.py  video_utils.py  vlc_controller.py
tests/: test_technical_director.py
